# tech-watch

./: .env.example  .gitignore  README.md  config.py  config.yaml  logger.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: daily_pipeline.yml
api/: __init__.py  app.py
collectors/: __init__.py  github_collector.py  pypi_collector.py  registry.py  rss_collector.py  trending_collector.py
engine/: __init__.py  classifier.py  impact_analyzer.py  rules.py  summarizer.py
pipeline/: __init__.py  diff.py  scoring.py  storage.py  transform.py  trends.py
scheduler/: __init__.py  run_daily.py
scripts/: __init__.py  _debug_body.py  _rescore.py  _rescore_json.py  _restore_and_rescore.py  run_pipeline.py
tests/: test_impact_analyzer.py
web/: app.js  compare.html  compare.js  compat.html  dashboard.html  data.json  index.html  outils.html  radar.html  radar.js  stack-advisor-radar.html  stack-advisor.css  stack-advisor.html  stack-advisor.js  styles.css  tool.html  tools-data.js  tools.css  tools.html
